# intel_hardware_optimization

./: 01-os-thread-optimization.md  02-compiler-tuning.md  03-memory-architecture.md  04-advanced-optimizations.md  04-gpu-npu-compute.md  05-final-benchmarks-comparison.md  Cargo.toml  README.md  install_isolcpus.sh  install_startup.sh  optimize.sh
.cargo/: config.toml
src/: compute_offload.rs  lib.rs  main.rs  memory.rs  power_tuning.rs  simd_vectorization.rs  system_tuner.rs  thread_pinning.rs
